[package]
name = "telemetry_oracle"
version = "0.1.0"
edition = "2021"
description = "An off-chain oracle CLI for real-world asset valuation on Solana"
authors = ["sabiar"]

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Serialization / Deserialization 
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Environment variable
dotenv = "0.15"

# Error handling
anyhow = "1"

# Command-line argument parsing
clap = { version = "4", features = ["derive"] }
